# RSC-LV3-Firmware

./: .gitmodules  README.md
Dashboard/: .gitignore  .mxproject  CMakeLists.txt  Dashboard.ioc  STM32H743XX_FLASH.ld  lv_conf.h  lv_conf_summary.md
Dashboard/EEZ-UI/: CMakeLists.txt  EEZ-UI.eez-project  EEZ-UI.eez-project-ui-state
Dashboard/EEZ-UI/src/ui/: .eez-project-build  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  vars.h
Dashboard/EEZ-UI/src/ui/fonts/: ui_font_barlow_14_semibold.c  ui_font_barlow_16_medium.c  ui_font_barlow_16_semibold.c  ui_font_barlow_24_bold.c
Dashboard/EEZ-UI/src/ui/images/: ui_image_console_icon.c  ui_image_driver_dashboard_icon.c  ui_image_health_monitor_icon.c  ui_image_home_icon.c  ui_image_hv_battery_icon.c  ui_image_list_icon.c  ui_image_lv_battery_icon.c  ui_image_mppt_icon.c  ui_image_rsc_short_transparent.c  ui_image_settings_icon.c
HV-BPS/: .mxproject  CMakeLists.txt  HV-BPS.ioc  STM32G474XX_FLASH.ld
LV3-CAN-Subsystem/: CMakeLists.txt  README.md
LV3-CAN-Subsystem/Define/: Parameters.def
LV3-CAN-Subsystem/Driver/: LV3_CAN_Driver.c  LV3_CAN_Driver.h
LV3-CAN-Subsystem/Src/: LV3_CAN.c  LV3_CAN.h  LV3_CAN_Parameters_XMacro.h  LV3_CAN_Triggers.h
LV3-Core-Test1/: CMakeLists.txt  LV3-Core-Test1.ioc  README.md  STM32G474XX_FLASH.ld
LV3-Core-Test2/: .mxproject  (+3 more)
LV3-Dash-Test2/eez-ui/: CMakeLists.txt  eez-ui.eez-project  eez-ui.eez-project-ui-state
LV3-Dash-Test2/eez-ui/src/ui/: .eez-project-build  actions.h  images.c  images.h  screens.c  screens.h  ui_image_home_icon.c
(+118 files in other folders)
